--- a/src/app/core/containers/core/core.component.html
+++ b/src/app/core/containers/core/core.component.html
@@ -6,6 +6,7 @@
   </div>
   <div class="row body-content">
     <app-aside-left class="col-3 left-aside" [@asideAnimation] = "asideState" [ngClass]="asideState == 'close' ? 'aside-close':''"></app-aside-left>
-    <app-main-content [dataBook]="dataBook" class="col-9 main-section"></app-main-content>
+    
+    <router-outlet></router-outlet>
   </div>
 </div>
