--- a/src/app/core/containers/core/core.component.html
+++ b/src/app/core/containers/core/core.component.html
@@ -6,7 +6,8 @@
   </div>
   <div class="row body-content">
     <app-aside-left class="col-3 left-aside" [@asideAnimation] = "asideState" [ngClass]="asideState == 'close' ? 'aside-close':''"></app-aside-left>
-    
-    <router-outlet></router-outlet>
+    <div class="col-9 main-section">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
