--- a/src/app/core/components/main-menu/main-menu.component.html
+++ b/src/app/core/components/main-menu/main-menu.component.html
@@ -1,26 +1,26 @@
-<ul class="nav flex-column main-menu">
-  <li class="nav-item">
-    <a class="nav-link" href="#/">
-      <i class="fa fa-tachometer" aria-hidden="true"></i>
-      <span>Inicio</span>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#/collections">
-      <i class="fa fa-book" aria-hidden="true"></i>
-      <span>Colección</span>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link">
-      <i class="fa fa-star" aria-hidden="true"></i>
-      <span>Favoritos</span>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link">
-      <i class="fa fa-power-off" aria-hidden="true"></i>
-      <span>Salir</span>
-    </a>
-  </li>
+<ul class="main-menu nav flex-column">
+    <li class="nav-item">
+        <a class="nav-link"  [routerLink]="['../main/pokemons']">
+            <i class="fa fa-tachometer"></i>
+            <span>Inicio</span>
+        </a>
+    </li>
+     <li class="nav-item">
+        <a class="nav-link" [routerLink]="['collections']">
+            <i class="fa fa-book" aria-hidden="true"></i>
+            <span>Colección</span>
+         </a>
+    </li>
+     <li class="nav-item">
+        <a class="nav-link">
+            <i class="fa fa-star"></i>
+            <span>Favorito</span>
+        </a>
+    </li>
+     <li class="nav-item">
+        <a class="nav-link">
+            <i class="fa fa-power-off"></i>
+            <span>Salir</span>
+        </a>
+    </li>
 </ul>
