--- a/src/app/core/containers/main-content/main-content.component.html
+++ b/src/app/core/containers/main-content/main-content.component.html
@@ -1,6 +1,7 @@
+<app-alert-messages></app-alert-messages>
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item active" >
+        <li class="breadcrumb-item">
             <a>Inicio</a>
         </li>
         <li class="breadcrumb-item active">
@@ -9,20 +10,6 @@
     </ol>
 </nav>
 
-<section class="container content">
-    <div class="row" id="books">
-        <div *ngFor="let book of books" class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-2">
-            <div class="card">
-                <div class="card-header">
-                    {{book.volumeInfo.title}}
-                </div>
-                <img class="card-img-top" src="{{book.volumeInfo.imageLinks.smallThumbnail}}" />
-                <div class="card-body">
-                    <p class="card-text">{{book.volumeInfo.publisher}}</p>
-                    <p class="card-text">{{book.volumeInfo.publishedDate}}</p>
-                    <a [routerLink]="['../detail/',book.id]" class="btn btn-primary col-12 col-md-auto col-lg-auto">Ver Detalle</a>
-                </div>
-            </div>
-        </div>
-    </div>
+<section class="container content" style="max-width: 100%">
+    <router-outlet></router-outlet>
 </section>
