--- a/src/app/poke-main/containers/main-content/main-content.component.html
+++ b/src/app/poke-main/containers/main-content/main-content.component.html
@@ -4,7 +4,7 @@
             <a>Inicio</a>
         </li>
         <li class="breadcrumb-item active">
-            <a>Pokemons</a>
+            <a>Pokemonsww</a>
         </li>
     </ol>
 </nav>
