--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -1,3 +1,20 @@
-<p>
-  login works!
-</p>
+<form (ngSubmit)="submit()" #loginForm="ngForm">
+  <div class="form-group has-feedback">
+    <input [(ngModel)]="login.email" #email="ngModel" type="email" class="form-control"
+    placeholder="Usuario" required name="username">
+    <div [hidden]="email.valid || email.pristine" class="alert alert-danger" role="alert">
+        Email Requerdo
+    </div>
+  </div>
+  <div class="form-group has-feedback">
+    <input [(ngModel)]="login.password" #password="ngModel" type="password" class="form-control" placeholder="Password" required name="password">
+    <div [hidden]="password.valid || password.pristine" class="alert alert-danger" role="alert">
+      Password Requerdo
+  </div>
+  </div> 
+  <div class="row">
+    <div class="box-footer">
+      <button [disabled]="!loginForm.form.valid" type="submit" class="btn btn-primary">Sign In</button>
+    </div>
+  </div>
+</form>
