--- a/src/app/core/containers/main-content/main-content.component.html
+++ b/src/app/core/containers/main-content/main-content.component.html
@@ -5,7 +5,7 @@
             <a>Inicio</a>
         </li>
         <li class="breadcrumb-item active">
-            <a>PokemonsReal</a>
+            <a>Pokemons</a>
         </li>
     </ol>
 </nav>
