--- a/src/app/core/components/main-menu/main-menu.component.html
+++ b/src/app/core/components/main-menu/main-menu.component.html
@@ -12,13 +12,13 @@
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link">
+    <a class="nav-link" routerLink="favorites">
       <i class="fa fa-star" aria-hidden="true"></i>
       <span>Favoritos</span>
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="pokemons">
+    <a class="nav-link" routerLink="#" (click)="logout()">
       <i class="fa fa-power-off" aria-hidden="true"></i>
       <span>Salir</span>
     </a>
