--- a/src/app/poke-main/components/poke-card/poke-card.component.html
+++ b/src/app/poke-main/components/poke-card/poke-card.component.html
@@ -1,6 +1,20 @@
 <div class="card">
   <div class="card-header">
-    {{_poke?.name}}
+      <div class="row">
+          <div class="col-2">
+              <div ngbDropdown class="d-inline-block">
+                <a class="toggle-sidebar" id="dropdownBasic2" ngbDropdownToggle><i class="fa fa-bars"></i></a>        
+                <div ngbDropdownMenu aria-labelledby="dropdownBasic2">
+                  <button *ngFor="let colection of collectiosList" class="dropdown-item" (click)="addToCollection(_poke, colection)">{{colection?.name}}</button>
+                  <button class="dropdown-item" (click)="addToCollection(_poke)">Add To Collecion</button>
+                  <button class="dropdown-item">Something else is here</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+                {{_poke?.name}}
+            </div>
+      </div>
   </div>
   <img class="card-img-top" src="{{_poke?.sprites.front_default}}" />
   <div class="card-body">
@@ -22,6 +36,7 @@
       <div class="col-6">
         <a  class="btn btn-primary col-12 col-md-auto col-lg-auto">Ver Detalle</a>
       </div>
+      
     </div>
   </div>
 </div>
