--- a/src/app/poke-main/components/poke-card/poke-card.component.html
+++ b/src/app/poke-main/components/poke-card/poke-card.component.html
@@ -34,7 +34,7 @@
           <i class="fa fa-heart"></i></button>
       </div>
       <div class="col-6">
-        <a  class="btn btn-primary col-12 col-md-auto col-lg-auto">Ver Detalle</a>
+        <a  class="btn btn-primary col-12 col-md-auto col-lg-auto" [routerLink]="['../detail', _poke?.id]">Ver Detalle</a>
       </div>
       
     </div>
