--- a/src/app/collections/containers/collection-list/collection-list.component.html
+++ b/src/app/collections/containers/collection-list/collection-list.component.html
@@ -1,3 +1,3 @@
-<p>
-  collection-list works!
-</p>
+<div> 
+  <app-collection-modal-content  (submitted)="create($event)"></app-collection-modal-content>
+</div>
