--- a/src/app/poke-main/containers/poke-detail/poke-detail.component.css
+++ b/src/app/poke-main/containers/poke-detail/poke-detail.component.css
@@ -8,3 +8,9 @@
     background-origin: padding-box, border-box;
     background-image: linear-gradient(45deg, #fff, #fff), linear-gradient(45deg, #4268f4, #f46841);
  }
+
+ .text_detail{
+   font-size: 1.5em;
+ }
+
+ .top-buffer { margin-top:20px; }
