--- a/src/app/core/containers/core/core.component.html
+++ b/src/app/core/containers/core/core.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <app-top-nav-bar (searchTop)="searchBook($event)" (stateAside)="eventAside($event)"></app-top-nav-bar>
+      <app-top-nav-bar (searchTop)="searchBook($event)"></app-top-nav-bar>
     </div>
   </div>
   <div class="row body-content">
