--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -5,7 +5,8 @@
         <b>Bzg POKE</b>APP</a>
     </div>    
     <div class="login-box-body">
-      <p class="login-box-msg">Ingresa tu usuario y contraseña</p>      
+      <p class="login-box-msg">Ingresa tu usuario y contraseña</p>     
+      <app-alert-messages></app-alert-messages> 
       <app-login-form (submitted)="auth($event)" (signByGoogle)="signWithGoogle($event)"></app-login-form>
     </div>    
   </div>  
