--- a/src/app/core/containers/top-nav-bar/top-nav-bar.component.html
+++ b/src/app/core/containers/top-nav-bar/top-nav-bar.component.html
@@ -1,15 +1,16 @@
 <header class="pokeNavBar row align-items-center">
     <div class="col-6">
         <a class="toggle-sidebar" (click)="close()"><i class="fa fa-bars"></i></a>
-        <h1>Poke App 2</h1>
+        <div>Poke App 2</div>
     </div>
     <div class="col-6 row align-items-center">
 
         <app-top-search-form (search)="search($event)" class="col-6"></app-top-search-form>
 
         <div class="col-6 user-icon">
-            <a class="link-profile"><img src="http://s3.amazonaws.com/37assets/svn/765-default-avatar.png"></a>
+            <a class="link-profile">
+               <img [src]="(user?.photoURL)? user?.photoURL : 'http://s3.amazonaws.com/37assets/svn/765-default-avatar.png'">
+            </a>
         </div>
-
     </div>
 </header>
