--- a/src/app/poke-main/components/poke-card/poke-card.component.html
+++ b/src/app/poke-main/components/poke-card/poke-card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-header">
+  <div class="card-header bg-info text-white">
       <div class="row">
           <div class="col-2">
               <div ngbDropdown class="d-inline-block">
