Tooltip adicionar a la colección

--- a/src/app/poke-main/components/poke-card/poke-card.component.html
+++ b/src/app/poke-main/components/poke-card/poke-card.component.html
@@ -2,12 +2,10 @@
   <div class="card-header bg-info text-white">
       <div class="row">
           <div class="col-2">
-              <div ngbDropdown class="d-inline-block">
+              <div ngbDropdown class="d-inline-block" title="Adicionar a la colección...">
                 <a class="toggle-sidebar" id="dropdownBasic2" ngbDropdownToggle><i class="fa fa-bars"></i></a>        
                 <div ngbDropdownMenu aria-labelledby="dropdownBasic2">
                   <button *ngFor="let colection of collectiosList" class="dropdown-item" (click)="addToCollection(_poke, colection)">{{colection?.name}}</button>
-                  <button class="dropdown-item" (click)="addToCollection(_poke)">Add To Collecion</button>
-                  <button class="dropdown-item">Something else is here</button>
                 </div>
               </div>
             </div>
