Responsive -Custom layout for mobile

--- a/src/app/core/components/main-menu/main-menu.component.html
+++ b/src/app/core/components/main-menu/main-menu.component.html
@@ -1,4 +1,4 @@
-<ul class="nav flex-column main-menu">
+<ul class="nav flex-row flex-md-column main-menu ">
   <li class="nav-item">
     <a class="nav-link" routerLink="pokemons">
       <i class="fa fa-tachometer" aria-hidden="true"></i>
