--- a/src/app/core/containers/aside-left/aside-left.component.html
+++ b/src/app/core/containers/aside-left/aside-left.component.html
@@ -1,5 +1,5 @@
 <aside>
-    <div class="aside-header">
+    <div class="aside-header d-none d-md-block">
         <app-header-aside-left [user]="user"></app-header-aside-left>
     </div>
     <div class="aside-body">
