--- a/src/app/core/containers/core/core.component.html
+++ b/src/app/core/containers/core/core.component.html
@@ -1,13 +1,16 @@
 <div class="container-fluid">
-  <div class="row">
+  <div class="row" >
     <div class="col">
       <app-top-nav-bar (searchTop)="searchBook($event)"></app-top-nav-bar>
     </div>
   </div>
-  <div class="row body-content">
-    <app-aside-left class="col-3 left-aside" [@asideAnimation]="state" [ngClass]="(state == 'close')? 'aside-close': ''"></app-aside-left>
+  <div class="row h-md-100">
+    <app-aside-left class="col-md-3 left-aside d-none d-md-block" [@asideAnimation]="state" [ngClass]="(state == 'close')? 'aside-close': ''"></app-aside-left>
+    
+    <app-aside-left class="col-md-3 left-aside d-block d-md-none" [@asideAnimationMobile]="state" [ngClass]="(state == 'close')? 'aside-close': ''"></app-aside-left>
+    
     <!--<app-main-content [dataBook]="dataBook" class="col-9 main-section"></app-main-content>-->
-    <div class="col-9 main-section">
+    <div class="col-md-9 main-section">
       <app-main-content></app-main-content>
       
     </div>
