--- a/src/app/core/containers/top-nav-bar/top-nav-bar.component.html
+++ b/src/app/core/containers/top-nav-bar/top-nav-bar.component.html
@@ -1,16 +1,21 @@
 <header class="pokeNavBar row align-items-center">
-    <div class="col-6">
+    <div class="col-md-6 sticky-top">
         <a class="toggle-sidebar" (click)="close()"><i class="fa fa-bars"></i></a>
         <div>Poke App 2</div>
     </div>
-    <div class="col-6 row align-items-center">
+    <div class="col-md-6">
 
-        <app-top-search-form (search)="search($event)" class="col-6"></app-top-search-form>
+        <div class="row">
+                <app-top-search-form (search)="search($event)" class="col-10 col-md-6"></app-top-search-form>
 
-        <div class="col-6 user-icon">
-            <a class="link-profile">
-               <img [src]="(user?.photoURL)? user?.photoURL : 'http://s3.amazonaws.com/37assets/svn/765-default-avatar.png'">
-            </a>
+                <div class="col-2 col-md-6 user-icon">
+                    <a class="link-profile">
+                       <img [src]="(user?.photoURL)? user?.photoURL : 'http://s3.amazonaws.com/37assets/svn/765-default-avatar.png'">
+                    </a>
+                </div>
+
         </div>
+
+        
     </div>
 </header>
