--- a/src/app/poke-main/containers/poke-detail/poke-detail.component.html
+++ b/src/app/poke-main/containers/poke-detail/poke-detail.component.html
@@ -46,7 +46,7 @@
         </div>
         <div class="row">
             <div class="col" style="text-align: center">
-              <app-poke-rating></app-poke-rating>
+              <app-poke-rating [pokemonId]="_id"></app-poke-rating>
             </div>
         </div>
       </div>
