Detail - Fix redirect from itself

--- a/src/app/poke-main/containers/poke-detail/poke-detail.component.html
+++ b/src/app/poke-main/containers/poke-detail/poke-detail.component.html
@@ -54,7 +54,7 @@
     <div class="row top-buffer">
         <div *ngFor="let pokemon of evolution"  class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
             <div>
-                <app-poke-card [poke]="pokemon"></app-poke-card>
+                <app-poke-card [poke]="pokemon" [detailLink]="detailLink"></app-poke-card>
             </div>
         </div>
     </div>
