--- a/src/app/poke-main/containers/poke-list/poke-list.component.html
+++ b/src/app/poke-main/containers/poke-list/poke-list.component.html
@@ -1,7 +1,7 @@
 <div class="row" id="books">
     <div *ngFor="let pokemon of pokeList?.results; let i=index"  class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
         <div *ngIf="i<10">
-            <app-poke-card [poke]="pokemon"></app-poke-card>
+            <app-poke-card [poke]="pokemon" [detailLink]="detailLink"></app-poke-card>
         </div>
     </div>
 </div>
