--- a/src/app/core/components/main-menu/main-menu.component.html
+++ b/src/app/core/components/main-menu/main-menu.component.html
@@ -2,25 +2,25 @@
   <li class="nav-item">
     <a class="nav-link" routerLink="pokemons">
       <i class="fa fa-tachometer" aria-hidden="true"></i>
-      <span>Inicio</span>
+      <span>Home</span>
     </a>
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink="collections">
       <i class="fa fa-book" aria-hidden="true"></i>
-      <span>Colección</span>
+      <span>Collections</span>
     </a>
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink="favorites">
       <i class="fa fa-star" aria-hidden="true"></i>
-      <span>Favoritos</span>
+      <span>Favorites</span>
     </a>
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink="#" (click)="logout()">
       <i class="fa fa-power-off" aria-hidden="true"></i>
-      <span>Salir</span>
+      <span>Logout</span>
     </a>
   </li>
 </ul>
