--- a/src/app/core/containers/main-content/main-content.component.html
+++ b/src/app/core/containers/main-content/main-content.component.html
@@ -1,15 +1,11 @@
 <app-alert-messages></app-alert-messages>
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb bg-info text-white">
-        <li class="breadcrumb-item">
-            <a>Inicio</a>
-        </li>
-        <li class="breadcrumb-item active">
-            <a>Pokemons</a>
-        </li>
+      <li class="breadcrumb-item"><a href="#">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Pokemons</li>
     </ol>
-</nav>
-
+  </nav>
+  
 <section class="container content" style="max-width: 100%">
     <router-outlet></router-outlet>
 </section>
