--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,6 @@
 
 html, body {
     font-family: 'Lobster', cursive;
-    background-color: var(--main-style-color);
 }
 
 html, body, .container-fluid {
@@ -54,6 +53,7 @@ div.user-image > img {
     box-shadow: 1px 0 2px var(--main-shadow-color);
     padding: 0;
     background-color: var(--main-style-color);
+    height: 100%;
 }
 
 .aside-header {
