--- a/src/app/core/containers/core/core.component.html
+++ b/src/app/core/containers/core/core.component.html
@@ -4,7 +4,7 @@
       <app-top-nav-bar (searchTop)="searchBook($event)"></app-top-nav-bar>
     </div>
   </div>
-  <div class="row h-md-100">
+  <div class="row">
     <app-aside-left class="col-md-3 left-aside d-none d-md-block" [@asideAnimation]="state" [ngClass]="(state == 'close')? 'aside-close': ''"></app-aside-left>
     
     <app-aside-left class="col-md-3 left-aside d-block d-md-none" [@asideAnimationMobile]="state" [ngClass]="(state == 'close')? 'aside-close': ''"></app-aside-left>
