--- a/src/app/poke-main/containers/poke-list/poke-list.component.html
+++ b/src/app/poke-main/containers/poke-list/poke-list.component.html
@@ -1,7 +1,21 @@
 <div class="row" id="books">
-    <div *ngFor="let pokemon of pokeList?.results; let i=index"  class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
-        <div *ngIf="i<10">
-            <app-poke-card [poke]="pokemon" [detailLink]="detailLink"></app-poke-card>
+    <div class="col-12">
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                    <ngb-pagination [collectionSize]="totalSize" [pageSize]="rowsPerPage" [maxSize]="5" [boundaryLinks]="true" [(page)]="pageNumber" aria-label="Default pagination"></ngb-pagination>
+
+            </div>
         </div>
+        <div class="row">
+                <div *ngFor="let pokemon of pokeList?.results; let i=index"  class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
+                            <app-poke-card [poke]="pokemon" [detailLink]="detailLink"></app-poke-card>
+                    </div>
+        </div>
+
     </div>
+
+
+
+
+    
 </div>
